--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -30,3 +30,46 @@ lastReceivedOrderID=Last received order ID:
 currentPoint=Current point:
 ControlsPanelTitle=Controls
 StatusPanelTitle=Status
+
+# Control Center
+inputDialog.button_cancel.text=Cancel
+inputDialog.button_ok.text=Ok
+inputDialog.button_reset.text=Reset
+ros2CommAdapterPanel.accessibleName=Loopback options
+ros2CommAdapterPanel.button_dispatchEvent.text=Dispatch event
+ros2CommAdapterPanel.button_failCurrentCommand.text=Fail current command
+ros2CommAdapterPanel.button_nextStep.text=Next step
+ros2CommAdapterPanel.button_setProperty.text = Apply
+ros2CommAdapterPanel.checkBox_commandProcessingAutomatic.text=Automatic mode
+ros2CommAdapterPanel.checkBox_commandProcessingManual.text=Single step/manual mode
+ros2CommAdapterPanel.checkBox_enableAdapter.text=Enable loopback adapter
+ros2CommAdapterPanel.checkBox_includeAppendix.text=Include message as appendix:
+ros2CommAdapterPanel.dialog_setEnergyLevel.title=Set energy level
+ros2CommAdapterPanel.dialog_setOrientationAngle.title=Set orientation angle
+ros2CommAdapterPanel.dialog_setPosition.title=Set vehicle position
+ros2CommAdapterPanel.dialog_setPrecisePosition.title=Set precise position
+ros2CommAdapterPanel.dialog_setState.title=Set vehicle state
+ros2CommAdapterPanel.label_energyLevel.text=Energy level:
+ros2CommAdapterPanel.label_maximumAcceleration.text=Acceleration:
+ros2CommAdapterPanel.label_maximumDeceleration.text=Deceleration:
+ros2CommAdapterPanel.label_maximumForwardVelocity.text=Max. forward velocity:
+ros2CommAdapterPanel.label_maximumReverseVelocity.text=Max. reverse velocity:
+ros2CommAdapterPanel.label_operatingTime.text=Operating time:
+ros2CommAdapterPanel.label_orientationAngle.text=Orientation:
+ros2CommAdapterPanel.label_pauseVehicle.text=Pause vehicle:
+ros2CommAdapterPanel.label_position.text=Position:
+ros2CommAdapterPanel.label_precisePosition.text=Precise position:
+ros2CommAdapterPanel.label_propertyKey.text=Key:
+ros2CommAdapterPanel.label_state.text=State:
+ros2CommAdapterPanel.panel_adapterStatus.border.title=Adapter status
+ros2CommAdapterPanel.panel_commandProcessing.border.title=Command processing
+ros2CommAdapterPanel.panel_eventDispatching.title=Event dispatching
+ros2CommAdapterPanel.panel_loadHandlingDevice.border.title=Load handling device
+ros2CommAdapterPanel.panel_vehicleProperties.border.title=Vehicle properties
+ros2CommAdapterPanel.panel_vehicleProperty.border.title = Vehicle property
+ros2CommAdapterPanel.panel_vehicleStatus.border.title=Current position/state
+ros2CommAdapterPanel.radioButton_removeProperty.text=Remove property
+ros2CommAdapterPanel.radioButton_setProperty.text=Set this value:
+ros2CommAdapterPanel.textArea_precisePosition.positionNotSetPlaceholder=-
+ros2CommAdapterPanel.textField_orientationAngle.angleNotSetPlaceholder=-
+ros2CommunicationAdapterDescription.description=ROS2 adapter (virtual vehicle)
