Add functionality for the Kernal ControlCenter

--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -28,14 +28,14 @@ LastFinishedOrder=Last finished order ID:
 currentOrderID=Current order ID:
 lastReceivedOrderID=Last received order ID:
 currentPoint=Current point:
-ControlsPanelTitle=Controls
+ControlsPanelTitle=ControlsR
 StatusPanelTitle=Status
 
 # Control Center
 inputDialog.button_cancel.text=Cancel
 inputDialog.button_ok.text=Ok
 inputDialog.button_reset.text=Reset
-ros2CommAdapterPanel.accessibleName=Loopback options
+ros2CommAdapterPanel.accessibleName=ROS2 Options
 ros2CommAdapterPanel.button_dispatchEvent.text=Dispatch event
 ros2CommAdapterPanel.button_failCurrentCommand.text=Fail current command
 ros2CommAdapterPanel.button_nextStep.text=Next step
@@ -72,4 +72,4 @@ ros2CommAdapterPanel.radioButton_removeProperty.text=Remove property
 ros2CommAdapterPanel.radioButton_setProperty.text=Set this value:
 ros2CommAdapterPanel.textArea_precisePosition.positionNotSetPlaceholder=-
 ros2CommAdapterPanel.textField_orientationAngle.angleNotSetPlaceholder=-
-ros2CommunicationAdapterDescription.description=ROS2 adapter (virtual vehicle)
+ros2CommAdapterDescription.description=ROS2 adapter (virtual vehicle)
