Implement new panel

--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -1,36 +1,4 @@
-ExampleAdapterFactoryDescription=Example communication adapter
-VehicleConnectionTitle=Connection to vehicle
-EnableAdapter=Enable adapter
-AdapterConnected=Connected
-ControlPanel.AdapterActive=Active
-ControlPanel.DisconnectOnTimeout=Disconnect when idle
-ControlPanel.DisconnectOnConnectionLoss=Automatic reconnect
-ControlPanel.EnableLogging=Enable logging
-ControlPanel.IdleAfter=Idle after (ms):
-OrderID=Order ID:
-OrderDestination=Destination point:
-OrderAction=Action:
-SendNewOrder=Send order telegram
-LastOrderTelegramTitle=Last orders sent to vehicle
-SendLastOrderAgain=Send order again
-VehicleIpAddress=IP address:
-VehicleTcpPort=TCP port:
-NewOrderTelegramTitle=New order telegram
-PeriodicStateRequestsTitle=Periodic state requests
-EnablePeriodicStateRequests=Enable periodic state requests
-StateRequestInterval=Request interval (ms):
-ManualStateRequestsTitle=Manual state requests
-SendStateRequest=Send state request
-LastReportedState=Last reported state
-OperationState=Operation state:
-LoadState=Load state:
-LastFinishedOrder=Last finished order ID:
-currentOrderID=Current order ID:
-lastReceivedOrderID=Last received order ID:
-currentPoint=Current point:
-ControlsPanelTitle=ControlsR
-StatusPanelTitle=Status
-
+EnableAdapter=Enable ROS2 adapter
 # Control Center
 inputDialog.button_cancel.text=Cancel
 inputDialog.button_ok.text=Ok
@@ -39,7 +7,8 @@ ros2CommAdapterPanel.accessibleName=ROS2 Options
 ros2CommAdapterPanel.button_dispatchEvent.text=Dispatch event
 ros2CommAdapterPanel.button_failCurrentCommand.text=Fail current command
 ros2CommAdapterPanel.button_nextStep.text=Next step
-ros2CommAdapterPanel.button_setProperty.text = Apply
+ros2CommAdapterPanel.button_setProperty.text=Apply
+ros2CommAdapterPanel.button_connect.text=Connect
 ros2CommAdapterPanel.checkBox_commandProcessingAutomatic.text=Automatic mode
 ros2CommAdapterPanel.checkBox_commandProcessingManual.text=Single step/manual mode
 ros2CommAdapterPanel.checkBox_enableAdapter.text=Enable loopback adapter
@@ -61,13 +30,19 @@ ros2CommAdapterPanel.label_position.text=Position:
 ros2CommAdapterPanel.label_precisePosition.text=Precise position:
 ros2CommAdapterPanel.label_propertyKey.text=Key:
 ros2CommAdapterPanel.label_state.text=State:
+ros2CommAdapterPanel.label_host.text=Host:
+ros2CommAdapterPanel.label_port.text=Port:
+ros2CommAdapterPanel.label_notConnected.text=Not connected.
+ros2CommAdapterPanel.label_connected.text=Connected.
+ros2CommAdapterPanel.label_hostNotFound.text=Host not found.
 ros2CommAdapterPanel.panel_adapterStatus.border.title=Adapter status
 ros2CommAdapterPanel.panel_commandProcessing.border.title=Command processing
 ros2CommAdapterPanel.panel_eventDispatching.title=Event dispatching
 ros2CommAdapterPanel.panel_loadHandlingDevice.border.title=Load handling device
 ros2CommAdapterPanel.panel_vehicleProperties.border.title=Vehicle properties
-ros2CommAdapterPanel.panel_vehicleProperty.border.title = Vehicle property
+ros2CommAdapterPanel.panel_vehicleProperty.border.title=Vehicle property
 ros2CommAdapterPanel.panel_vehicleStatus.border.title=Current position/state
+ros2CommAdapterPanel.panel_connection.border.title=Connection properties
 ros2CommAdapterPanel.radioButton_removeProperty.text=Remove property
 ros2CommAdapterPanel.radioButton_setProperty.text=Set this value:
 ros2CommAdapterPanel.textArea_precisePosition.positionNotSetPlaceholder=-
