--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -8,10 +8,10 @@ ros2CommAdapterPanel.button_dispatchEvent.text=Dispatch event
 ros2CommAdapterPanel.button_failCurrentCommand.text=Fail current command
 ros2CommAdapterPanel.button_nextStep.text=Next step
 ros2CommAdapterPanel.button_setProperty.text=Apply
-ros2CommAdapterPanel.button_connect.text=Connect
+ros2CommAdapterPanel.button_connect.text=Connect Node
 ros2CommAdapterPanel.checkBox_commandProcessingAutomatic.text=Automatic mode
 ros2CommAdapterPanel.checkBox_commandProcessingManual.text=Single step/manual mode
-ros2CommAdapterPanel.checkBox_enableAdapter.text=Enable loopback adapter
+ros2CommAdapterPanel.checkBox_enableAdapter.text=Enable ROS2 driver
 ros2CommAdapterPanel.checkBox_includeAppendix.text=Include message as appendix:
 ros2CommAdapterPanel.dialog_setEnergyLevel.title=Set energy level
 ros2CommAdapterPanel.dialog_setOrientationAngle.title=Set orientation angle
@@ -30,12 +30,10 @@ ros2CommAdapterPanel.label_position.text=Position:
 ros2CommAdapterPanel.label_precisePosition.text=Precise position:
 ros2CommAdapterPanel.label_propertyKey.text=Key:
 ros2CommAdapterPanel.label_state.text=State:
-ros2CommAdapterPanel.label_host.text=Host:
-ros2CommAdapterPanel.label_port.text=Port:
+ros2CommAdapterPanel.label_domain_id.text=Domain ID:
 ros2CommAdapterPanel.label_notConnected.text=Not connected.
 ros2CommAdapterPanel.label_connected.text=Connected.
-ros2CommAdapterPanel.label_hostNotFound.text=Host not found.
-ros2CommAdapterPanel.panel_adapterStatus.border.title=Adapter status
+ros2CommAdapterPanel.panel_adapterStatus.border.title=Driver
 ros2CommAdapterPanel.panel_commandProcessing.border.title=Command processing
 ros2CommAdapterPanel.panel_eventDispatching.title=Event dispatching
 ros2CommAdapterPanel.panel_loadHandlingDevice.border.title=Load handling device
@@ -46,5 +44,7 @@ ros2CommAdapterPanel.panel_connection.border.title=Connection properties
 ros2CommAdapterPanel.radioButton_removeProperty.text=Remove property
 ros2CommAdapterPanel.radioButton_setProperty.text=Set this value:
 ros2CommAdapterPanel.textArea_precisePosition.positionNotSetPlaceholder=-
-ros2CommAdapterPanel.textField_orientationAngle.angleNotSetPlaceholder=-
+ros2CommAdapterPanel.textField_domainId=0
+ros2CommAdapterPanel.messageDialog.text=Please provide a valid domain id.
 ros2CommAdapterDescription.description=ROS2 adapter (virtual vehicle)
+
