Cleanup, removed clone script, include default config

--- a/openTCS-NeNa-CommAdapter-ROS2/build.gradle
+++ b/openTCS-NeNa-CommAdapter-ROS2/build.gradle
@@ -1,35 +1,32 @@
 apply from: "${rootDir}/gradle/guice-project.gradle"
+
 repositories {
-  jcenter{
-    url "https://dl.bintray.com/ihmcrobotics/maven-release"
-  }
+//    flatDir { dirs 'libs' }
 }
 
 dependencies {
-  compile project(':openTCS-NeNa-Common')
-  
-  compile group: 'org.opentcs', name: 'opentcs-api-injection', version: openTcsBaselineVersion
-  compileOnly group: 'org.opentcs', name: 'opentcs-api-injection', version: openTcsBaselineVersion, classifier: 'sources'
+    compile project(':openTCS-NeNa-Common')
 
-  compile group: 'org.opentcs', name: 'opentcs-common', version: openTcsBaselineVersion
-  compileOnly group: 'org.opentcs', name: 'opentcs-common', version: openTcsBaselineVersion, classifier: 'sources'
-  
-  compile group: 'org.opentcs.contrib', name: 'opentcs-contrib-tcp-netty', version: '0.13.0'
-  compileOnly group: 'org.opentcs.contrib', name: 'opentcs-contrib-tcp-netty', version: '0.13.0', classifier: 'sources'
-  
-  compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
-  compileOnly group: 'commons-codec', name: 'commons-codec', version: '1.10', classifier: 'sources'
+    compile group: 'org.opentcs', name: 'opentcs-api-injection', version: openTcsBaselineVersion
+    compileOnly group: 'org.opentcs', name: 'opentcs-api-injection', version: openTcsBaselineVersion, classifier: 'sources'
 
-  // ROS2 libraries.
-  compile group: "us.ihmc", name: "ihmc-ros2-library", version: '0.15.3'
-  compile group: "us.ihmc", name: "ros2-common-interfaces", version: '0.15.3' // ROS2 common message library
-  compile group: "us.ihmc", name: "ros2-msg-to-pubsub-generator", version: '0.15.3' // generator for .msg -> .java
+    compile group: 'org.opentcs', name: 'opentcs-common', version: openTcsBaselineVersion
+    compileOnly group: 'org.opentcs', name: 'opentcs-common', version: openTcsBaselineVersion, classifier: 'sources'
 
-  // Lombok
-  compileOnly 'org.projectlombok:lombok:1.18.12'
-  annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    compile group: 'org.opentcs.contrib', name: 'opentcs-contrib-tcp-netty', version: '0.13.0'
+    compileOnly group: 'org.opentcs.contrib', name: 'opentcs-contrib-tcp-netty', version: '0.13.0', classifier: 'sources'
 
-  testCompileOnly 'org.projectlombok:lombok:1.18.12'
-  testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+    compileOnly group: 'commons-codec', name: 'commons-codec', version: '1.10', classifier: 'sources'
+
+    // ROS2 libraries.
+//    compile fileTree(include: ['*.jar'], dir: 'libs')
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
