--- a/openTCS-NeNa-CommAdapter-ROS2/build.gradle
+++ b/openTCS-NeNa-CommAdapter-ROS2/build.gradle
@@ -6,7 +6,13 @@ apply from: "${rootDir}/gradle/guice-project.gradle"
 
 String dir_rcljava = ros2JavaPath + 'install_isolated/rcljava/share/rcljava/java/'
 String dir_rcljava_common = ros2JavaPath + 'install_isolated/rcljava_common/share/rcljava_common/java/'
-String dir_std_msgs_messages = ros2JavaPath + 'install_isolated/std_msgs/share/std_msgs/java/'
+String dir_std_msgs = ros2JavaPath + 'install_isolated/std_msgs/share/std_msgs/java/'
+String dir_geometry_msgs = ros2JavaPath + 'install_isolated/geometry_msgs/share/geometry_msgs/java/'
+String dir_builtin_interfaces = ros2JavaPath + 'install_isolated/builtin_interfaces/share/builtin_interfaces/java/'
+String dir_action_msgs = ros2JavaPath + 'install_isolated/action_msgs/share/action_msgs/java/'
+String dir_unique_identifier_msgs = ros2JavaPath + 'install_isolated/unique_identifier_msgs/share/unique_identifier_msgs/java/'
+String dir_actionlib_msgs = ros2JavaPath + 'install_isolated/actionlib_msgs/share/actionlib_msgs/java/'
+String dir_move_base_msgs = ros2JavaPath + 'install_isolated/move_base_msgs/share/move_base_msgs/java/'
 
 repositories {
     flatDir {
@@ -24,7 +30,14 @@ dependencies {
     checkRos2JavaPath
     compile fileTree(include: ['*.jar'], dir: dir_rcljava )
     compile fileTree(include: ['*.jar'], dir: dir_rcljava_common)
-    compile fileTree(include: ['*.jar'], dir: dir_std_msgs_messages)
+    compile fileTree(include: ['*.jar'], dir: dir_std_msgs)
+    compile fileTree(include: ['*.jar'], dir: dir_geometry_msgs)
+    compile fileTree(include: ['*.jar'], dir: dir_builtin_interfaces)
+    compile fileTree(include: ['*.jar'], dir: dir_action_msgs)
+    compile fileTree(include: ['*.jar'], dir: dir_unique_identifier_msgs)
+//    compile fileTree(include: ['*.jar'], dir: dir_actionlib_msgs)
+//    compile fileTree(include: ['*.jar'], dir: dir_move_base_msgs)
+//    compile fileTree(include: ['*.jar'], dir: "/home/nielstiben/Downloads/tmp")
 
     // OpenTCS
     compile project(':openTCS-NeNa-Common')
