--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -8,7 +8,9 @@ ros2CommAdapterPanel.button_dispatchEvent.text=Dispatch event
 ros2CommAdapterPanel.button_failCurrentCommand.text=Fail current command
 ros2CommAdapterPanel.button_nextStep.text=Next step
 ros2CommAdapterPanel.button_setProperty.text=Apply
-ros2CommAdapterPanel.button_connect.text=Connect Node
+ros2CommAdapterPanel.button_enable.text=Enable
+ros2CommAdapterPanel.button_disable.text=Disable
+ros2CommAdapterPanel.button_new_goal.text=New goal
 ros2CommAdapterPanel.checkBox_commandProcessingAutomatic.text=Automatic mode
 ros2CommAdapterPanel.checkBox_commandProcessingManual.text=Single step/manual mode
 ros2CommAdapterPanel.checkBox_enableAdapter.text=Enable ROS2 driver
@@ -17,6 +19,7 @@ ros2CommAdapterPanel.dialog_setEnergyLevel.title=Set energy level
 ros2CommAdapterPanel.dialog_setOrientationAngle.title=Set orientation angle
 ros2CommAdapterPanel.dialog_setPosition.title=Set vehicle position
 ros2CommAdapterPanel.dialog_setPrecisePosition.title=Set precise position
+ros2CommAdapterPanel.dialog_newGoal.title=New goal
 ros2CommAdapterPanel.dialog_setState.title=Set vehicle state
 ros2CommAdapterPanel.label_energyLevel.text=Energy level:
 ros2CommAdapterPanel.label_maximumAcceleration.text=Acceleration:
@@ -31,13 +34,14 @@ ros2CommAdapterPanel.label_precisePosition.text=Precise position:
 ros2CommAdapterPanel.label_propertyKey.text=Key:
 ros2CommAdapterPanel.label_state.text=State:
 ros2CommAdapterPanel.label_domain_id.text=Domain ID:
-ros2CommAdapterPanel.label_notConnected.text=Not connected.
+ros2CommAdapterPanel.label_nodeInactive.text=Node is inactive.
 ros2CommAdapterPanel.label_connected.text=Connected.
 ros2CommAdapterPanel.panel_adapterStatus.border.title=Driver
 ros2CommAdapterPanel.panel_commandProcessing.border.title=Command processing
 ros2CommAdapterPanel.panel_eventDispatching.title=Event dispatching
 ros2CommAdapterPanel.panel_loadHandlingDevice.border.title=Load handling device
 ros2CommAdapterPanel.panel_vehicleProperties.border.title=Vehicle properties
+ros2CommAdapterPanel.panel_navigationGoals.border.title=Navigation goals
 ros2CommAdapterPanel.panel_vehicleProperty.border.title=Vehicle property
 ros2CommAdapterPanel.panel_vehicleStatus.border.title=Current position/state
 ros2CommAdapterPanel.panel_connection.border.title=Connection properties
@@ -46,5 +50,7 @@ ros2CommAdapterPanel.radioButton_setProperty.text=Set this value:
 ros2CommAdapterPanel.textArea_precisePosition.positionNotSetPlaceholder=-
 ros2CommAdapterPanel.textField_domainId=0
 ros2CommAdapterPanel.messageDialog.text=Please provide a valid domain id.
+ros2CommAdapterPanel.invalidCoordinatesDialog.text=Please provide a valid coordinate.
 ros2CommAdapterDescription.description=ROS2 adapter (virtual vehicle)
 
+AdapterConnected=
