Implement navigate to OpenTCS point.

--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -10,7 +10,8 @@ ros2CommAdapterPanel.button_nextStep.text=Next step
 ros2CommAdapterPanel.button_setProperty.text=Apply
 ros2CommAdapterPanel.button_enable.text=Enable
 ros2CommAdapterPanel.button_disable.text=Disable
-ros2CommAdapterPanel.button_new_goal.text=New goal
+ros2CommAdapterPanel.button_dispatch_to_coordinate.text=Dispatch to coordinate
+ros2CommAdapterPanel.button_dispatch_to_point.text=Dispatch to point
 ros2CommAdapterPanel.checkBox_commandProcessingAutomatic.text=Automatic mode
 ros2CommAdapterPanel.checkBox_commandProcessingManual.text=Single step/manual mode
 ros2CommAdapterPanel.checkBox_enableAdapter.text=Enable ROS2 driver
@@ -19,7 +20,9 @@ ros2CommAdapterPanel.dialog_setEnergyLevel.title=Set energy level
 ros2CommAdapterPanel.dialog_setOrientationAngle.title=Set orientation angle
 ros2CommAdapterPanel.dialog_setPosition.title=Set vehicle position
 ros2CommAdapterPanel.dialog_setPrecisePosition.title=Set precise position
-ros2CommAdapterPanel.dialog_newGoal.title=New goal
+ros2CommAdapterPanel.dialog_dispatchVehicleToCoordinate.title=Dispatch vehicle to coordinate
+ros2CommAdapterPanel.dialog_dispatchVehicleToCoordinate.text=Insert a coordinate:
+ros2CommAdapterPanel.dialog_dispatchToPoint.title=Dispatch vehicle to point.
 ros2CommAdapterPanel.dialog_setState.title=Set vehicle state
 ros2CommAdapterPanel.label_energyLevel.text=Energy level:
 ros2CommAdapterPanel.label_maximumAcceleration.text=Acceleration:
@@ -44,13 +47,19 @@ ros2CommAdapterPanel.panel_vehicleProperties.border.title=Vehicle properties
 ros2CommAdapterPanel.panel_navigationGoals.border.title=Navigation goals
 ros2CommAdapterPanel.panel_vehicleProperty.border.title=Vehicle property
 ros2CommAdapterPanel.panel_vehicleStatus.border.title=Current position/state
-ros2CommAdapterPanel.panel_connection.border.title=Connection properties
+ros2CommAdapterPanel.panel_vehicle.border.title=Vehicle properties
 ros2CommAdapterPanel.radioButton_removeProperty.text=Remove property
 ros2CommAdapterPanel.radioButton_setProperty.text=Set this value:
 ros2CommAdapterPanel.textArea_precisePosition.positionNotSetPlaceholder=-
 ros2CommAdapterPanel.textField_domainId=0
 ros2CommAdapterPanel.messageDialog.text=Please provide a valid domain id.
-ros2CommAdapterPanel.invalidCoordinatesDialog.text=Please provide a valid coordinate.
+ros2CommAdapterPanel.navigation_goal_table_column_uuid.text=UUID
+ros2CommAdapterPanel.navigation_goal_table_column_last_updated.text=Last updated
+ros2CommAdapterPanel.navigation_goal_table_column_destination.text=Destination
+ros2CommAdapterPanel.navigation_goal_table_column_status.text=Status
+ros2CommAdapterPanel.navigation_goal_unknown_destination.text=Unknown
+ros2CommAdapterPanel.unit_meter=meter
 ros2CommAdapterDescription.description=ROS2 adapter (virtual vehicle)
 
 AdapterConnected=
+ros2CommAdapterPanel.panel_vehicle.border=Connection properties
