--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -33,6 +33,9 @@ ros2CommAdapterPanel.label_operatingTime.text=Operating time:
 ros2CommAdapterPanel.label_orientationAngle.text=Orientation:
 ros2CommAdapterPanel.label_pauseVehicle.text=Pause vehicle:
 ros2CommAdapterPanel.label_position.text=Position:
+ros2CommAdapterPanel.label_position_point.text=Position (point):
+ros2CommAdapterPanel.label_position_coordinate.text=Position (coordinate):
+ros2CommAdapterPanel.label_position_estimate.text=Position (estimate):
 ros2CommAdapterPanel.label_precisePosition.text=Precise position:
 ros2CommAdapterPanel.label_propertyKey.text=Key:
 ros2CommAdapterPanel.label_state.text=State:
