Implement Plant Scaler

--- a/openTCS-NeNa-Kernel/src/main/resources/nl/saxion/nena/opentcs/kernel/distribution/config/opentcs-kernel-defaults-custom.properties
+++ b/openTCS-NeNa-Kernel/src/main/resources/nl/saxion/nena/opentcs/kernel/distribution/config/opentcs-kernel-defaults-custom.properties
@@ -2,6 +2,7 @@
 # To adjust the application configuration, override values in a separate file.
 
 ros2.adapter.enable = true
+ros2.adapter.plantModelScale = 0.1
 ros2.adapter.simulationTimeFactor = 1.0
 ros2.adapter.commandQueueCapacity = 2
 ros2.adapter.rechargeOperation = CHARGE
