--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -36,10 +36,11 @@ ros2CommAdapterPanel.label_position.text=Position:
 ros2CommAdapterPanel.label_position_point.text=Position (point):
 ros2CommAdapterPanel.label_position_coordinate.text=Position (coordinate):
 ros2CommAdapterPanel.label_position_estimate.text=Position (estimate):
+ros2CommAdapterPanel.label_orientation_degrees.text=Orientation (degrees):
 ros2CommAdapterPanel.label_precisePosition.text=Precise position:
 ros2CommAdapterPanel.label_propertyKey.text=Key:
 ros2CommAdapterPanel.label_state.text=State:
-ros2CommAdapterPanel.label_domain_id.text=Domain ID:
+ros2CommAdapterPanel.label_namespace.text=Namespace:
 ros2CommAdapterPanel.label_nodeInactive.text=Node is inactive.
 ros2CommAdapterPanel.label_connected.text=Connected.
 ros2CommAdapterPanel.panel_adapterStatus.border.title=Driver
@@ -54,8 +55,8 @@ ros2CommAdapterPanel.panel_vehicle.border.title=Vehicle properties
 ros2CommAdapterPanel.radioButton_removeProperty.text=Remove property
 ros2CommAdapterPanel.radioButton_setProperty.text=Set this value:
 ros2CommAdapterPanel.textArea_precisePosition.positionNotSetPlaceholder=-
-ros2CommAdapterPanel.textField_domainId=0
-ros2CommAdapterPanel.messageDialog.text=Please provide a valid domain id.
+ros2CommAdapterPanel.textField_domainId=
+ros2CommAdapterPanel.messageDialog.text=Please provide a valid namespace.
 ros2CommAdapterPanel.navigation_goal_table_column_uuid.text=UUID
 ros2CommAdapterPanel.navigation_goal_table_column_last_updated.text=Last updated
 ros2CommAdapterPanel.navigation_goal_table_column_destination.text=Destination
