Implementat Initial Point setter

--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle.properties
@@ -20,6 +20,7 @@ ros2CommAdapterPanel.dialog_setEnergyLevel.title=Set energy level
 ros2CommAdapterPanel.dialog_setOrientationAngle.title=Set orientation angle
 ros2CommAdapterPanel.dialog_setPosition.title=Set vehicle position
 ros2CommAdapterPanel.dialog_setPrecisePosition.title=Set precise position
+ros2CommAdapterPanel.dialog_setInitialPoint.title=Set initial point
 ros2CommAdapterPanel.dialog_dispatchVehicleToCoordinate.title=Dispatch vehicle to coordinate
 ros2CommAdapterPanel.dialog_dispatchVehicleToCoordinate.text=Insert a coordinate:
 ros2CommAdapterPanel.dialog_dispatchToPoint.title=Dispatch vehicle to point.
